--- a/LUAD.Rmd
+++ b/LUAD.Rmd
@@ -13,7 +13,10 @@ knitr::opts_chunk$set(echo = TRUE)
 We first load necessary libraries
 ```{r}
 #install.packages("naniar")
+#install.packages("cowplot") 
 #install.packages("superml")
+#install.packages("VIM")
+library(VIM)
 library(naniar)
 library(ggplot2)
 library(dplyr)
@@ -22,26 +25,44 @@ library(corrplot)
 library(superml) #Label Encoding
 library(caret) #dummyVars for One Hot Encoding
 ```
-
-
 # DATA
 
 ### Load the Data
 ```{r}
 missing.values <- c("N/A","na","?","", "NaN", "not reported", "NA")
-data <- read.csv("C:\\Users\\sakma\\Desktop\\Ders Kayıtları\\Data Mining\\Final Project\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
+
+#data <- read.csv("C:\\Users\\sakma\\Desktop\\Ders Kayıtları\\Data Mining\\Final Project\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
+
+data <- read.csv("C:\\Users\\Gaye\\OneDrive\\Masaüstü\\dersKayıtü\\DataScience\\DataScienceFinal\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
+
 ```
 
 ### **We should give some information about data....**
 ```{r cars}
 summary(data)
+```
+
+As we can see from the summary() result our variables have different types of classes. Also, most of them include NA values.
+
+Let's run str() to get information about types of features.
+```{r cars}
 str(data) #Types of features
 ```
+From the str() result, we understand that our features includes different types of classes also we can see lots of NA values.
+
+
+Let's take a final look at the structure and contents of our data in a visual and more entertaining way.
+
+```{r}
+library(visdat)
+vis_dat(data)
+```
+
+As we can see from the table, we have many NA values, but some variables look full NA. We cannot say that these will be of use to us in the later stages.
 
 # PREPROCESSING
 
-## First we're going to drop the fully NaN columns. Because these columns are not useful for us.
-Maybe we can show these fully nan columns in a fashionable way.
+## At this step firstly we're going to drop the fully NaN columns. Because these columns are not useful for us. Maybe we can show these full nan columns in a fashionable way.
 
 **we are going to get a rough glimpse on the missingness situation with the pretty neat naniar package**
 
@@ -49,19 +70,33 @@ Maybe we can show these fully nan columns in a fashionable way.
 ```{r}
 # Are there missing values in the dataset?
 any_na(data)
+```
+
+```{r}
 # How many?
 n_miss(data)
 prop_miss(data)
-# Which variables are affected?
-data %>% is.na() %>% colSums()
-
-
-data_new <- data[ , colSums(is.na(data)) < nrow(data)]
-summary(data_new)
 
 ```
 
-Now let's take a closer look at to the missing values with tables.
+```{r}
+
+# Which variables are affected?
+data %>% is.na() %>% colSums()
+
+```
+
+```{r}
+
+# Drop full NA variables and append the new data frame to the data_new
+data_new <- data[ , colSums(is.na(data)) < nrow(data)]
+# Take a look our new dataframe
+summary(data_new)
+
+```
+Now we got rid of the full NA variables but we still have some variables that contain NA values.
+
+Let's take a closer look at to the missing values with tables.
 ```{r}
 # Get number of missings per variable (n and %)
 miss_var_summary(data_new)
@@ -69,7 +104,10 @@ miss_var_summary(data_new)
 
 ```
 
-We can see the missing values with descending order in a more visualize version.
+By looking at missing summary per variable, we notice that especially the “year_of_death”-Variable has the highest amount of missings among all variables in the dataset. The variable represents the “year of death of individuals.” 
+
+We can transfer this summary to a visual representation like this:
+
 ```{r}
 # Which variables contain the most missing variables?
 gg_miss_var(data_new)
@@ -80,12 +118,60 @@ To get a better understanding whether or not the data are missing at random, we 
 # Where are missings located?
 vis_miss(data_new) + theme(axis.text.x = element_text(angle=80))
 ```
-**Note:** We can show the relationship between *days_to_last_follow_up* and *days_to_death* columns** that data is missing with the existence of other.
+We can see where the missing values are “clustered” and it seems to match our findings from our previous overview on the presence of missing values per variable.
+
+We can see that the presence of some values in some variables coincides with the absence of others. We can see the *days_to_last_follow_up* and *days_to_death* columns** that are an example of missing with the existence of others.
+
+Now is the presence of some values are related with missingness in other variables? Let’s find out.
+
+```{r}
+gg_miss_upset(data_new)
+```
+The results are compatible with the observation that there is a substantial number of cases in which some missingness happen to occur across certain variables.
+
+From above result we can say that **There is a direct realtionship between *days_to_last_follow_up* and *days_to_death* columns**. Of course, there are other variables that meet this condition. But the binary that stood out compared to the numeric values was *days_to_last_follow_up* and *days_to_death*.
 
 
-**There is a direct realtionship between *days_to_last_follow_up* and *days_to_death* columns**  
-- In *days_to_death* column values are NaN for **alive** patients and there is just information about **dead** patients how long they lived.
-- On the other hand, If there is a case like that if patient vital status is dead but days_to_death is 0. We'll drop that index.
+Before doing anything to missing values, we need to know the pattern of occurrence of missing values.The most effective way to do this is to draw a plot.
+
+In order to examine the pattern between the variables containing the missing value by drawing a plot, let's take only the variables with missing values from all the variables
+
+```{r}
+#columns_with_na<-names(which(colSums(is.na(data_new)) > 0))
+#columns_with_na
+
+data_w_na <- subset(data_new, select = c(columns_with_na))
+data_w_na
+```
+
+Here first we change the variable name of *days_to_last_follow_up* to *days_to_lfu* in order to fit the name in the plot. This variable gives us information about how long alive people have their check-in and there is no information about the dead patients.
+
+```{r}
+names(data_w_na)[names(data_w_na) == 'days_to_last_follow_up'] <- 'days_to_lfu'
+```
+
+The missing patterns can be visualized using VIM package.
+
+```{r}
+
+
+aggr(data_w_na, col=c('lightblue','red'),  sortVars=TRUE, labels=names(data_w_na), cex.axis=.5, gap=3, ylab=c("Histogram of missing data","Pattern"))
+
+
+
+```
+The histogram shows the proportion of missingness and the plot on the right gives the frequencies for different combinations of variables missing where. Blue refers to observed data and red to missing data.
+
+From the above plot, again we can see presence of some values that related with missingness in other variables.
+
+-----------------------
+
+In the code below we'll drop the index, if there is a case like that if patient vital status is dead but days_to_death is 0.
+
+Because as we mentioned above **There is a direct realtionship between *days_to_last_follow_up* and *days_to_death* columns** 
+
+Also, in *days_to_death* column values are NaN for **alive** patients and there is just information about **dead** patients how long they lived.
+
 ```{r}
 filter(data_new, days_to_death == 0 & vital_status == "dead")
 nrow(data_new)
@@ -110,18 +196,37 @@ data_new <- subset(data_new, select = -c(days_to_last_follow_up))
 ```
 
 - '''We can drop year_of_birth column because we already have days_to_birth which is more suitable for our algorithm'''
+
 - '''In 'state' column all the variables are same for all rows as 'released'. We'll drop it''' (*SHOW THAT*)
+
+```{r}
+#unique_data <- sapply(data_new, function(x) length(unique(x)))
+unique_data <- data_new %>% summarise_each(funs(n_distinct))
+unique_data
+```
+
+```{r}
+
+```
+
+
+
 - '''Drop updated_datetime because there is no special information about patient status'''(We don't have to prove it with table or plot it's just not useful)
 - '''Also we should remove the ids. Because there is nothing special for these ids. These are just random variables.'''
   - id_columns = {"diagnosis_id", "exposure_id", "demographic_id", "treatment_id", "bcr_patient_barcode"}
 - 76% of the year_of_death column is missing. We're going to drop that column because we already have the information of days_to_death which refers to information of lifetime of the patient before dying. 
 
-**Note:** We should show that with a nice plot or table.
+
 ```{r}
 data_new <- subset(data_new, select = -c(year_of_birth, state, updated_datetime, diagnosis_id, exposure_id, demographic_id, treatment_id, bcr_patient_barcode, year_of_death))
 ```
 
+After dropping unnecessary variables which is fully NA and variables that contain only the same values, this is our last version of data.
 
+```{r}
+library(visdat)
+vis_dat(data_new)
+```
 
 ## Missing Value Imputations
 
